--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,15 @@ p{
   text-align: justify;
   margin-bottom: 12px;
 }
+
+li {
+  font-size: 14px;
+  color: #373737;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 18px;
+  text-align: justify;
+}
+
 p a{
   color: #218bdc;
 }
