--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ a{
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  background: #fff url(../images/block.gif) no-repeat 0 51px;
+  background: #fff url(/web/20160803070917/https://www.bayleaks.com/images/block.gif) no-repeat 0 51px;
 }
 #block_error div{
   padding: 100px 40px 0 186px;
@@ -75,28 +75,28 @@ a{
 }
 
 #bigquote{
-  background:#fff; 
-  text-align: center; 
-  clear:justify; 
-  font:18px Georgia, "Times New Roman", Times, serif; 
-  font-style:italic; 
-  margin: 20px auto 0px auto 
+  background:#fff;
+  text-align: center;
+  clear:justify;
+  font:18px Georgia, "Times New Roman", Times, serif;
+  font-style:italic;
+  margin: 20px auto 0px auto
 }
 #signature{
-  background:#fff; 
-  text-align:right; 
-  font:16px Georgia, "Times New Roman", Times, serif; 
-  font-style:italic; 
-  margin: 30px auto 0px auto 
+  background:#fff;
+  text-align:right;
+  font:16px Georgia, "Times New Roman", Times, serif;
+  font-style:italic;
+  margin: 30px auto 0px auto
 }
 #mainbody{
-  background:#fff; 
-  text-align:justify; 
-  font:16px Arial, sans-serif; margin: 30px auto 140px auto; 
-  padding: 24px; 
+  background:#fff;
+  text-align:justify;
+  font:16px Arial, sans-serif; margin: 30px auto 140px auto;
+  padding: 24px;
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 700px; 
+  max-width: 700px;
 }
 #mainbody .logo-section {
   background: #f5f5f5;
